<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/explore_menu"
        android:enabled="true"
        android:icon="@drawable/explorer"
        android:title="@string/postModels"
        app:showAsAction="never"/>

    <item
        android:id="@+id/notification_menu"
        android:enabled="true"
        android:icon="@drawable/notification"
        app:showAsAction="never"
        android:title="@string/notification" />
    <item
        android:id="@+id/addpost_menu"
        android:enabled="true"
        android:icon="@drawable/addpost"
        app:showAsAction="never"
        android:title="@string/add_post" />
    <item
        android:id="@+id/search_user_menu"
        android:enabled="true"
        android:icon="@drawable/account_search_outline"
        app:showAsAction="never"
        android:title="@string/search_users" />
    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/home_bottom"
        app:showAsAction="never"
        android:title="@string/home" />


</menu>