<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ir.cenlearn.alonegram.fragments.EditProfileFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/bg_profile_edit"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="49dp"
            app:cardElevation="5dp"
            android:foreground="@drawable/border_profile"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/edit_userimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/change_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:background="@drawable/s_selector_dialog"
            android:padding="2dp"
            android:text="تغییر عکس پروفایل"
            android:textColor="#0091EA"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ویرایش مشخصات"
                android:textColor="#000000"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fullname"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_fullname"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#2DABBC"
                    android:drawableLeft="@drawable/user_icon_edit"
                    android:gravity="center_horizontal"
                    android:hint="@string/ekhtiari"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="35dp"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.837"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#2DABBC"
                    android:digits="12345678910"
                    android:drawableLeft="@drawable/phone_android"
                    android:gravity="center"
                    android:hint="@string/ekhtiari"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:paddingRight="28dp"
                    android:textSize="12dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mail"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#2DABBC"
                    android:drawableLeft="@drawable/email_icon"
                    android:gravity="center"
                    android:hint="@string/elzami"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="28dp"
                    android:textSize="12dp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/s_selector"
                android:text="@string/btn_submit"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="13dp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>