<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FfFfFf"
    android:id="@+id/addpost_layout"
    tools:context="ir.cenlearn.alonegram.Activities.AddPostsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        tools:ignore="MissingConstraints"
        android:elevation="1dp"
        android:background="#FFFFFF"
        android:id="@+id/actionbar">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:onClick="backarrow"
            android:src="@drawable/arrow_left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="افزودن پست"
            android:layout_marginLeft="60dp"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />


    </FrameLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:id="@+id/scroll_addpost"
        android:layout_marginBottom="57dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:id="@+id/show_edit_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/dotted">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_post_click"
                        android:textColor="#BFBFBF"
                        android:textSize="12dp" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/video_image"
                    android:layout_width="match_parent"
                    android:layout_height="440dp"
                    android:adjustViewBounds="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:background="#CDCDCD"
                    tools:ignore="MissingConstraints" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.62">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/video_name"
                        android:textDirection="inherit"
                        android:textSize="13dp"

                        />


                    <EditText
                        android:id="@+id/editnamevideo"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="50"
                        android:inputType="textPersonName"
                        android:paddingRight="10dp"
                        android:textSize="13dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.71000004">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textDirection="inherit"
                        android:id="@+id/linear_guide"
                        >

                        <TextView
                            android:id="@+id/guideid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guide"
                            android:textColor="#0098B3"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textSize="13dp"

                            />

                        <TextView
                            android:id="@+id/video_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/id_aparat"
                            android:textDirection="inherit"
                            android:textSize="13dp"

                            />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/videoid"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:hint="@string/ekhtiari"
                        android:textSize="13dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textDirection="inherit"
                        android:text="@string/video_summary"
                        android:textSize="13dp"

                        />

                    <EditText
                        android:id="@+id/editdescvideo"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:background="@drawable/bg_edittext"
                        android:gravity="right"
                        android:minHeight="80dp"
                        android:maxHeight="200dp"
                        android:padding="6dp"
                        android:textSize="13dp" />


                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:background="@drawable/search_bg_selector"
                    android:text="@string/send_post"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="10dp" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fff"
        android:id="@+id/navigation"
        app:itemIconTint="@color/navigation_color"
        app:itemTextColor="@color/navigation_color"
        app:itemIconSize="25dp"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>