<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="#FDFDFD"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        tools:ignore="MissingConstraints"
        android:elevation="1dp"
        android:background="#ffffff"
        android:id="@+id/actionbar">



        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_left"
            android:layout_marginLeft="16dp"
            android:onClick="backarrow"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/search"
            android:layout_gravity="right|center_vertical"
            android:onClick="search"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="60dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/bg_search"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 12345678910 _."
            android:drawableRight="@drawable/account_search_outline_black"
            android:gravity="left|center_vertical"
            android:hint="@string/search_users"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="13dp"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />


    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="-2dp"
        android:layout_marginTop="60dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="57dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nouser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_users_ac"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:indeterminateTint="#9A9A9A"
        android:visibility="invisible"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/actionbar"
        app:layout_constraintEnd_toEndOf="@+id/actionbar"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@+id/actionbar"
        app:layout_constraintTop_toTopOf="@+id/actionbar"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fff"
        android:id="@+id/navigation"
        app:itemIconTint="@color/navigation_color"
        app:itemTextColor="@color/navigation_color"
        app:itemIconSize="25dp"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>